# transparent-module

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
example/: README.md  example.py  requirements.txt
include/bringauto/modules/transparent_module/: transparent_module.hpp
include/bringauto/modules/transparent_module/devices/testing_device/: testing_module_manager.hpp
include/bringauto/transparent_module_utils/: external_server_api_structures.hpp
source/: device_management.cpp  external_server_api.cpp  memory_management.cpp  module_manager.cpp
source/bringauto/modules/devices/testing_device/: testing_module_manager.cpp
